--- a/data/GSE124008/build-SE-GSE124008.ipynb
+++ b/data/GSE124008/build-SE-GSE124008.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "085791f3-9489-4ef4-8d04-a5bb11aebc81",
    "metadata": {
     "tags": []
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "2384d61a-fa7e-43e8-8548-22373d9ed268",
    "metadata": {
     "tags": []
@@ -577,6 +577,155 @@
    "source": [
     "se_list"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "c0b0edcf-892b-479b-9d59-d14a4f1d0a02",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "saveRDS(se_list$BNA_TF_H3K27ac, 'GSE124008-BNA_TF_H3K27ac.rds')\n",
+    "saveRDS(se_list$BNA_TF, 'GSE124008-BNA_TF.rds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a0a7c04b-2c74-434a-827c-1cde635ac08b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "TERMS OF USE NOTICE:\n",
+      "  When using Synapse, remember that the terms and conditions of use require that you:\n",
+      "  1) Attribute data contributors when discussing these data or results from these data.\n",
+      "  2) Not discriminate, identify, or recontact individuals or groups represented by the data.\n",
+      "  3) Use and contribute only data de-identified to HIPAA standards.\n",
+      "  4) Redistribute data only under these same terms of use.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "library(synapser)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "d6307a00-d67e-467f-9a7b-a5fe38fc7400",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message in read.table(\"../../synapse-authToken.tsv\"):\n",
+      "“incomplete final line found by readTableHeader on '../../synapse-authToken.tsv'”\n"
+     ]
+    }
+   ],
+   "source": [
+    "syn_token <- read.table(\"../../synapse-authToken.tsv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "84248d02-e072-4ceb-aac4-ee158d07c5be",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NULL"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "synLogin(authToken=syn_token$V1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "3f5fb97f-a1d1-4172-a00a-250e755fc4ba",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "project <- Project('MPRAbase')\n",
+    "project <- synStore(project)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "948854ae-2e81-4873-95b3-b7bb551bd364",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dataFolder <- Folder(\"data\", parent = project)\n",
+    "dataFolder <- synStore(dataFolder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "c9bf008b-0a34-4143-9af7-3790adde1f7f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "geo_dataFolder <- Folder(\"GSE124008\", parent = dataFolder)\n",
+    "geo_dataFolder <- synStore(geo_dataFolder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "bc9a7141-5f6c-4d1b-b50b-5937248f5acb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "file <- File(path = 'GSE124008-BNA_TF_H3K27ac.rds', parent = geo_dataFolder)\n",
+    "file <- synStore(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "fd044bab-7470-4092-a140-5439fe2f61ca",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "file <- File(path = 'GSE124008-BNA_TF.rds', parent = geo_dataFolder)\n",
+    "file <- synStore(file)"
+   ]
   }
  ],
  "metadata": {
@@ -591,7 +740,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.2"
+   "version": "4.2.3"
   }
  },
  "nbformat": 4,
