Sync Wynton update v0.1.0

--- a/data/GSE124008/build-SE-GSE124008.ipynb
+++ b/data/GSE124008/build-SE-GSE124008.ipynb
@@ -44,6 +44,51 @@
       "    summarize\n",
       "\n",
       "\n",
+      "Loading required package: SummarizedExperiment\n",
+      "\n",
+      "Loading required package: MatrixGenerics\n",
+      "\n",
+      "Loading required package: matrixStats\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘matrixStats’\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:plyr’:\n",
+      "\n",
+      "    count\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:dplyr’:\n",
+      "\n",
+      "    count\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘MatrixGenerics’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:matrixStats’:\n",
+      "\n",
+      "    colAlls, colAnyNAs, colAnys, colAvgsPerRowSet, colCollapse,\n",
+      "    colCounts, colCummaxs, colCummins, colCumprods, colCumsums,\n",
+      "    colDiffs, colIQRDiffs, colIQRs, colLogSumExps, colMadDiffs,\n",
+      "    colMads, colMaxs, colMeans2, colMedians, colMins, colOrderStats,\n",
+      "    colProds, colQuantiles, colRanges, colRanks, colSdDiffs, colSds,\n",
+      "    colSums2, colTabulates, colVarDiffs, colVars, colWeightedMads,\n",
+      "    colWeightedMeans, colWeightedMedians, colWeightedSds,\n",
+      "    colWeightedVars, rowAlls, rowAnyNAs, rowAnys, rowAvgsPerColSet,\n",
+      "    rowCollapse, rowCounts, rowCummaxs, rowCummins, rowCumprods,\n",
+      "    rowCumsums, rowDiffs, rowIQRDiffs, rowIQRs, rowLogSumExps,\n",
+      "    rowMadDiffs, rowMads, rowMaxs, rowMeans2, rowMedians, rowMins,\n",
+      "    rowOrderStats, rowProds, rowQuantiles, rowRanges, rowRanks,\n",
+      "    rowSdDiffs, rowSds, rowSums2, rowTabulates, rowVarDiffs, rowVars,\n",
+      "    rowWeightedMads, rowWeightedMeans, rowWeightedMedians,\n",
+      "    rowWeightedSds, rowWeightedVars\n",
+      "\n",
+      "\n",
+      "Loading required package: GenomicRanges\n",
+      "\n",
       "Loading required package: stats4\n",
       "\n",
       "Loading required package: BiocGenerics\n",
@@ -116,49 +161,6 @@
       "\n",
       "Loading required package: GenomeInfoDb\n",
       "\n",
-      "Loading required package: SummarizedExperiment\n",
-      "\n",
-      "Loading required package: MatrixGenerics\n",
-      "\n",
-      "Loading required package: matrixStats\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘matrixStats’\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:plyr’:\n",
-      "\n",
-      "    count\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    count\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘MatrixGenerics’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:matrixStats’:\n",
-      "\n",
-      "    colAlls, colAnyNAs, colAnys, colAvgsPerRowSet, colCollapse,\n",
-      "    colCounts, colCummaxs, colCummins, colCumprods, colCumsums,\n",
-      "    colDiffs, colIQRDiffs, colIQRs, colLogSumExps, colMadDiffs,\n",
-      "    colMads, colMaxs, colMeans2, colMedians, colMins, colOrderStats,\n",
-      "    colProds, colQuantiles, colRanges, colRanks, colSdDiffs, colSds,\n",
-      "    colSums2, colTabulates, colVarDiffs, colVars, colWeightedMads,\n",
-      "    colWeightedMeans, colWeightedMedians, colWeightedSds,\n",
-      "    colWeightedVars, rowAlls, rowAnyNAs, rowAnys, rowAvgsPerColSet,\n",
-      "    rowCollapse, rowCounts, rowCummaxs, rowCummins, rowCumprods,\n",
-      "    rowCumsums, rowDiffs, rowIQRDiffs, rowIQRs, rowLogSumExps,\n",
-      "    rowMadDiffs, rowMads, rowMaxs, rowMeans2, rowMedians, rowMins,\n",
-      "    rowOrderStats, rowProds, rowQuantiles, rowRanges, rowRanks,\n",
-      "    rowSdDiffs, rowSds, rowSums2, rowTabulates, rowVarDiffs, rowVars,\n",
-      "    rowWeightedMads, rowWeightedMeans, rowWeightedMedians,\n",
-      "    rowWeightedSds, rowWeightedVars\n",
-      "\n",
-      "\n",
       "Loading required package: Biobase\n",
       "\n",
       "Welcome to Bioconductor\n",
@@ -181,6 +183,8 @@
       "\n",
       "    anyMissing, rowMedians\n",
       "\n",
+      "\n",
+      "Loading required package: SingleCellExperiment\n",
       "\n"
      ]
     }
@@ -189,6 +193,7 @@
     "library(dplyr)\n",
     "library(tidyr)\n",
     "library(plyr)\n",
+    "library(iSEE)\n",
     "library(GenomicRanges)\n",
     "library(MultiAssayExperiment)\n",
     "library(SummarizedExperiment)"
@@ -387,6 +392,252 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ebe6eaca-9c9b-4eaf-af66-89a07171ad61",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>chr10</li><li>chr11</li><li>chr18</li><li>chr19</li><li>chr2</li><li>chr4</li><li>chr5</li><li>chr7</li><li>chr9</li><li>chr10</li><li>chr11</li><li>chr1</li><li>chr11</li><li>chr1</li><li>chr11</li><li>chr1</li><li>chr11</li><li>chr1</li><li>chr11</li><li>chr1</li><li>chr12</li><li>chr13</li><li>chr14</li><li>chr1</li><li>chr14</li><li>chr15</li><li>chr16</li><li>chr17</li><li>chr1</li><li>chr17</li><li>chr1</li><li>chr17</li><li>chr1</li><li>chr18</li><li>chr1</li><li>chr18</li><li>chr1</li><li>chr18</li><li>chr19</li><li>chr1</li><li>chr19</li><li>chr2</li><li>chr3</li><li>chr4</li><li>chr5</li><li>chr6</li><li>chr7</li><li>chr8</li><li>chr9</li><li>chr12</li><li>chr13</li><li>chr14</li><li>chr2</li><li>chr5</li><li>chr6</li></ol>\n",
+       "\n",
+       "<details>\n",
+       "\t<summary style=display:list-item;cursor:pointer>\n",
+       "\t\t<strong>Levels</strong>:\n",
+       "\t</summary>\n",
+       "\t<style>\n",
+       "\t.list-inline {list-style: none; margin:0; padding: 0}\n",
+       "\t.list-inline>li {display: inline-block}\n",
+       "\t.list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "\t</style>\n",
+       "\t<ol class=list-inline><li>'chr1'</li><li>'chr2'</li><li>'chr3'</li><li>'chr4'</li><li>'chr5'</li><li>'chr6'</li><li>'chr7'</li><li>'chr8'</li><li>'chr9'</li><li>'chr10'</li><li>'chr11'</li><li>'chr12'</li><li>'chr13'</li><li>'chr14'</li><li>'chr15'</li><li>'chr16'</li><li>'chr17'</li><li>'chr18'</li><li>'chr19'</li></ol>\n",
+       "</details>"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item chr10\n",
+       "\\item chr11\n",
+       "\\item chr18\n",
+       "\\item chr19\n",
+       "\\item chr2\n",
+       "\\item chr4\n",
+       "\\item chr5\n",
+       "\\item chr7\n",
+       "\\item chr9\n",
+       "\\item chr10\n",
+       "\\item chr11\n",
+       "\\item chr1\n",
+       "\\item chr11\n",
+       "\\item chr1\n",
+       "\\item chr11\n",
+       "\\item chr1\n",
+       "\\item chr11\n",
+       "\\item chr1\n",
+       "\\item chr11\n",
+       "\\item chr1\n",
+       "\\item chr12\n",
+       "\\item chr13\n",
+       "\\item chr14\n",
+       "\\item chr1\n",
+       "\\item chr14\n",
+       "\\item chr15\n",
+       "\\item chr16\n",
+       "\\item chr17\n",
+       "\\item chr1\n",
+       "\\item chr17\n",
+       "\\item chr1\n",
+       "\\item chr17\n",
+       "\\item chr1\n",
+       "\\item chr18\n",
+       "\\item chr1\n",
+       "\\item chr18\n",
+       "\\item chr1\n",
+       "\\item chr18\n",
+       "\\item chr19\n",
+       "\\item chr1\n",
+       "\\item chr19\n",
+       "\\item chr2\n",
+       "\\item chr3\n",
+       "\\item chr4\n",
+       "\\item chr5\n",
+       "\\item chr6\n",
+       "\\item chr7\n",
+       "\\item chr8\n",
+       "\\item chr9\n",
+       "\\item chr12\n",
+       "\\item chr13\n",
+       "\\item chr14\n",
+       "\\item chr2\n",
+       "\\item chr5\n",
+       "\\item chr6\n",
+       "\\end{enumerate*}\n",
+       "\n",
+       "\\emph{Levels}: \\begin{enumerate*}\n",
+       "\\item 'chr1'\n",
+       "\\item 'chr2'\n",
+       "\\item 'chr3'\n",
+       "\\item 'chr4'\n",
+       "\\item 'chr5'\n",
+       "\\item 'chr6'\n",
+       "\\item 'chr7'\n",
+       "\\item 'chr8'\n",
+       "\\item 'chr9'\n",
+       "\\item 'chr10'\n",
+       "\\item 'chr11'\n",
+       "\\item 'chr12'\n",
+       "\\item 'chr13'\n",
+       "\\item 'chr14'\n",
+       "\\item 'chr15'\n",
+       "\\item 'chr16'\n",
+       "\\item 'chr17'\n",
+       "\\item 'chr18'\n",
+       "\\item 'chr19'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. chr10\n",
+       "2. chr11\n",
+       "3. chr18\n",
+       "4. chr19\n",
+       "5. chr2\n",
+       "6. chr4\n",
+       "7. chr5\n",
+       "8. chr7\n",
+       "9. chr9\n",
+       "10. chr10\n",
+       "11. chr11\n",
+       "12. chr1\n",
+       "13. chr11\n",
+       "14. chr1\n",
+       "15. chr11\n",
+       "16. chr1\n",
+       "17. chr11\n",
+       "18. chr1\n",
+       "19. chr11\n",
+       "20. chr1\n",
+       "21. chr12\n",
+       "22. chr13\n",
+       "23. chr14\n",
+       "24. chr1\n",
+       "25. chr14\n",
+       "26. chr15\n",
+       "27. chr16\n",
+       "28. chr17\n",
+       "29. chr1\n",
+       "30. chr17\n",
+       "31. chr1\n",
+       "32. chr17\n",
+       "33. chr1\n",
+       "34. chr18\n",
+       "35. chr1\n",
+       "36. chr18\n",
+       "37. chr1\n",
+       "38. chr18\n",
+       "39. chr19\n",
+       "40. chr1\n",
+       "41. chr19\n",
+       "42. chr2\n",
+       "43. chr3\n",
+       "44. chr4\n",
+       "45. chr5\n",
+       "46. chr6\n",
+       "47. chr7\n",
+       "48. chr8\n",
+       "49. chr9\n",
+       "50. chr12\n",
+       "51. chr13\n",
+       "52. chr14\n",
+       "53. chr2\n",
+       "54. chr5\n",
+       "55. chr6\n",
+       "\n",
+       "\n",
+       "\n",
+       "**Levels**: 1. 'chr1'\n",
+       "2. 'chr2'\n",
+       "3. 'chr3'\n",
+       "4. 'chr4'\n",
+       "5. 'chr5'\n",
+       "6. 'chr6'\n",
+       "7. 'chr7'\n",
+       "8. 'chr8'\n",
+       "9. 'chr9'\n",
+       "10. 'chr10'\n",
+       "11. 'chr11'\n",
+       "12. 'chr12'\n",
+       "13. 'chr13'\n",
+       "14. 'chr14'\n",
+       "15. 'chr15'\n",
+       "16. 'chr16'\n",
+       "17. 'chr17'\n",
+       "18. 'chr18'\n",
+       "19. 'chr19'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       " [1] chr10 chr11 chr18 chr19 chr2  chr4  chr5  chr7  chr9  chr10 chr11 chr1 \n",
+       "[13] chr11 chr1  chr11 chr1  chr11 chr1  chr11 chr1  chr12 chr13 chr14 chr1 \n",
+       "[25] chr14 chr15 chr16 chr17 chr1  chr17 chr1  chr17 chr1  chr18 chr1  chr18\n",
+       "[37] chr1  chr18 chr19 chr1  chr19 chr2  chr3  chr4  chr5  chr6  chr7  chr8 \n",
+       "[49] chr9  chr12 chr13 chr14 chr2  chr5  chr6 \n",
+       "19 Levels: chr1 chr2 chr3 chr4 chr5 chr6 chr7 chr8 chr9 chr10 chr11 ... chr19"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rowRange_list$BNA_H3K27ac@seqnames@values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b8f9c584-5670-493a-bba9-1337e545a7ce",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GRanges object with 218 ranges and 1 metadata column:\n",
+       "      seqnames              ranges strand |      sample\n",
+       "         <Rle>           <IRanges>  <Rle> | <character>\n",
+       "  540    chr10     3337504-3337903      * | BNA_H3K27ac\n",
+       "  548    chr11   77423506-77423905      * | BNA_H3K27ac\n",
+       "  580    chr18   23706496-23706895      * | BNA_H3K27ac\n",
+       "  581    chr18   23706507-23706907      * | BNA_H3K27ac\n",
+       "  584    chr18   61447506-61447905      * | BNA_H3K27ac\n",
+       "  ...      ...                 ...    ... .         ...\n",
+       "  893    chr14   23520672-23521072      * | BNA_H3K27ac\n",
+       "  941     chr2 167844594-167844994      * | BNA_H3K27ac\n",
+       "  951     chr2     4348645-4349044      * | BNA_H3K27ac\n",
+       "  988     chr5   32066238-32066638      * | BNA_H3K27ac\n",
+       "  999     chr6 122393612-122394011      * | BNA_H3K27ac\n",
+       "  -------\n",
+       "  seqinfo: 19 sequences from an unspecified genome; no seqlengths"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "row.names(rowRange_list$BNA_H3K27ac)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d10f580f-15fd-4f78-9272-2f4a0ea2e900",
    "metadata": {},
@@ -396,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "23587604-66e0-4b98-b02e-d5505e3d3a98",
    "metadata": {
     "tags": []
@@ -431,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "9ddc1b5b-0fcf-4a3e-91b2-812cd2b5edf7",
    "metadata": {
     "tags": []
@@ -443,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "0c1b4fd4-c547-4236-b759-19e16594bd43",
    "metadata": {
     "tags": []
@@ -465,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "085791f3-9489-4ef4-8d04-a5bb11aebc81",
    "metadata": {
     "tags": []
@@ -510,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "2384d61a-fa7e-43e8-8548-22373d9ed268",
    "metadata": {
     "tags": []
@@ -580,7 +831,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
+   "id": "cf8fec45-850d-4e99-b811-44e897a5c06c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n",
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n",
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n",
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n",
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n",
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n",
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n",
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n",
+      "The `name` provided ('') does not correspond to a known icon\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "app <- iSEE(se_list$BNA_TF_H3K27ac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0db5a7ab-3a0a-4787-9fde-e83d98796d2e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading required package: shiny\n",
+      "\n",
+      "\n",
+      "Listening on http://0.0.0.0:3838\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "shiny::runApp(app, port = 3838, host = \"0.0.0.0\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "c0b0edcf-892b-479b-9d59-d14a4f1d0a02",
    "metadata": {
     "tags": []
@@ -593,7 +905,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
+   "id": "5cb0ca4a-091c-40c2-a210-702e63237b05",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "saveRDS(se_list$BNA_H3K27ac, 'GSE124008-BNA_H3K27ac.rds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "a0a7c04b-2c74-434a-827c-1cde635ac08b",
    "metadata": {
     "tags": []
@@ -621,28 +945,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "id": "d6307a00-d67e-467f-9a7b-a5fe38fc7400",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in read.table(\"../../synapse-authToken.tsv\"):\n",
-      "“incomplete final line found by readTableHeader on '../../synapse-authToken.tsv'”\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "syn_token <- read.table(\"../../synapse-authToken.tsv\")"
+    "syn_token <- read.table(\"../../synapse-authToke_JJ.tsv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "id": "84248d02-e072-4ceb-aac4-ee158d07c5be",
    "metadata": {
     "tags": []
@@ -664,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "3f5fb97f-a1d1-4172-a00a-250e755fc4ba",
    "metadata": {
     "tags": []
@@ -677,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "948854ae-2e81-4873-95b3-b7bb551bd364",
    "metadata": {
     "tags": []
@@ -690,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "c9bf008b-0a34-4143-9af7-3790adde1f7f",
    "metadata": {
     "tags": []
@@ -703,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "bc9a7141-5f6c-4d1b-b50b-5937248f5acb",
    "metadata": {
     "tags": []
@@ -716,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "fd044bab-7470-4092-a140-5439fe2f61ca",
    "metadata": {
     "tags": []
@@ -726,6 +1041,27 @@
     "file <- File(path = 'GSE124008-BNA_TF.rds', parent = geo_dataFolder)\n",
     "file <- synStore(file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9142a136-c500-4f86-8587-0465203eceee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "file <- File(path = 'GSE124008-BNA_H3K27ac.rds', parent = geo_dataFolder)\n",
+    "file <- synStore(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b813100-99ad-4029-bccd-7aed02a1d687",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
