--- a/data/build-iSEE-MPRAbase_yaml.ipynb
+++ b/data/build-iSEE-MPRAbase_yaml.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "aaa9a9c7-5a48-4785-8676-59f85c9cf9ad",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Load necessary libraries\n",
     "library(tools)\n",
-    "library(yaml)\n"
+    "library(yaml)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7ea8c41f-42b7-4738-acca-041d94f4d311",
    "metadata": {
     "tags": []
@@ -47,46 +49,40 @@
     "  }\n",
     "}\n",
     "\n",
-    "# The rds_data_list now contains data from all .rds files in the subfolders\n"
+    "# The rds_data_list now contains data from all .rds files in the subfolders"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "20fceb7f-ff61-4b2c-a392-5e14bda20135",
+   "execution_count": 34,
+   "id": "53ab2c96-28d8-4fef-9f49-c2375147211d",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "pilot_list <- tail(rds_data_list,n=2)\n",
-    "yaml_output <- list()\n",
+    "metadata_list <- list()\n",
+    "config_list <- list()\n",
     "\n",
-    "for(i in 1:length(pilot_list)){\n",
+    "for(i in 1:length(rds_data_list)){\n",
     "    \n",
-    "    yaml_output[[i]] <- list(\n",
+    "    metadata_list[[i]] <- list(\n",
     "        id = paste0('BFC',i),\n",
-    "        uri = paste0('localhost://../../MPRAbase-Builder/data', sub(\"\\\\./\", \"\", names(pilot_list[1])), \".rds\"),\n",
-    "        \"title\" = metadata(pilot_list[[i]])$ENCODE_ID,\n",
-    "        \"provider\" = \"provider\",\n",
-    "        \"contact\" = \"contact\",\n",
-    "        \"geo\" = \"geo\",\n",
-    "        \"encode\" = metadata(pilot_list[[i]])$ENCODE_ID,\n",
-    "        \"description\" = \"description\",\n",
-    "        \"reference\" = \"reference\"\n",
-    "        \n",
+    "        title=paste0('BFC',i),\n",
+    "        uri = paste0('localhost://../../MPRAbase-Builder/data', sub(\"\\\\./\", \"\", names(rds_data_list)[[i]]), \".rds\"),\n",
+    "        description =  paste0('BFC',i))\n",
+    "    \n",
+    "    config_list[[i]] <- list(\n",
+    "        id = paste0(\"config\",i,\"rcall\"),\n",
+    "        title=\"MPRA Secondary Analysis\",\n",
+    "        datasets = list(paste0('BFC',i)),\n",
+    "        uri = \"localhost://../../MPRAbase-Builder/configs/analysis-secondary.R\",\n",
+    "        description = \"Test `SampleAssay` panel for biological replicate correlation analysis.\"\n",
     "    )\n",
+    "    \n",
     "}\n",
-    "yaml::write_yaml(list(datasets=yaml_output), \"MPRAbase-v0.1.1.yaml\")"
+    "yaml::write_yaml(list(datasets=metadata_list, initial=config_list), \"MPRAbase-v0.1.2.yaml\", indent = 2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c1a1dc6-1b4a-47da-bd0a-1aad24501805",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -101,7 +97,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
