--- a/data/GSE124008/build-SE-GSE124008.ipynb
+++ b/data/GSE124008/build-SE-GSE124008.ipynb
@@ -12,6 +12,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Warning message:\n",
+      "“package ‘dplyr’ was built under R version 4.2.3”\n",
       "\n",
       "Attaching package: ‘dplyr’\n",
       "\n",
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c2233cbf-1f51-4301-ae62-7a499cb12b2b",
    "metadata": {
     "tags": []
@@ -334,9 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d09f3950-d792-4359-aafd-563799de3732",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "colData <- data.frame(unique(df$Group))\n",
@@ -354,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "07acc7aa-2e66-4c0c-92a3-68c10060ddb9",
    "metadata": {
     "tags": []
@@ -380,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "93813dcc-5275-4bf9-a1b1-c877570586d3",
    "metadata": {
     "tags": []
@@ -393,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "ebe6eaca-9c9b-4eaf-af66-89a07171ad61",
    "metadata": {
     "tags": []
@@ -602,37 +606,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "b8f9c584-5670-493a-bba9-1337e545a7ce",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "GRanges object with 218 ranges and 1 metadata column:\n",
-       "      seqnames              ranges strand |      sample\n",
-       "         <Rle>           <IRanges>  <Rle> | <character>\n",
-       "  540    chr10     3337504-3337903      * | BNA_H3K27ac\n",
-       "  548    chr11   77423506-77423905      * | BNA_H3K27ac\n",
-       "  580    chr18   23706496-23706895      * | BNA_H3K27ac\n",
-       "  581    chr18   23706507-23706907      * | BNA_H3K27ac\n",
-       "  584    chr18   61447506-61447905      * | BNA_H3K27ac\n",
-       "  ...      ...                 ...    ... .         ...\n",
-       "  893    chr14   23520672-23521072      * | BNA_H3K27ac\n",
-       "  941     chr2 167844594-167844994      * | BNA_H3K27ac\n",
-       "  951     chr2     4348645-4349044      * | BNA_H3K27ac\n",
-       "  988     chr5   32066238-32066638      * | BNA_H3K27ac\n",
-       "  999     chr6 122393612-122394011      * | BNA_H3K27ac\n",
-       "  -------\n",
-       "  seqinfo: 19 sequences from an unspecified genome; no seqlengths"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "row.names(rowRange_list$BNA_H3K27ac)"
    ]
@@ -647,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "23587604-66e0-4b98-b02e-d5505e3d3a98",
    "metadata": {
     "tags": []
@@ -682,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "9ddc1b5b-0fcf-4a3e-91b2-812cd2b5edf7",
    "metadata": {
     "tags": []
@@ -694,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "0c1b4fd4-c547-4236-b759-19e16594bd43",
    "metadata": {
     "tags": []
@@ -716,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "085791f3-9489-4ef4-8d04-a5bb11aebc81",
    "metadata": {
     "tags": []
@@ -761,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "2384d61a-fa7e-43e8-8548-22373d9ed268",
    "metadata": {
     "tags": []
@@ -1076,7 +1055,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.2.2"
   }
  },
  "nbformat": 4,
