--- a/data/build-iSEE-MPRAbase_yaml.ipynb
+++ b/data/build-iSEE-MPRAbase_yaml.ipynb
@@ -54,7 +54,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
+   "id": "44826b9f-acc8-47d7-900d-a8d00d491269",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "$`.//GSE124008/GSE124008-BNA_H3K27ac`\n",
+       "class: RangedSummarizedExperiment \n",
+       "dim: 218 1 \n",
+       "metadata(0):\n",
+       "assays(3): dna.avg rna.avg rna_dna.avg\n",
+       "rownames(218): 1 2 ... 217 218\n",
+       "rowData names(1): sample\n",
+       "colnames(1): BNA_H3K27ac\n",
+       "colData names(1): sample\n",
+       "\n",
+       "$`.//GSE124008/GSE124008-BNA_TF_H3K27ac`\n",
+       "class: RangedSummarizedExperiment \n",
+       "dim: 538 1 \n",
+       "metadata(0):\n",
+       "assays(3): dna.avg rna.avg rna_dna.avg\n",
+       "rownames(538): 1 2 ... 537 538\n",
+       "rowData names(1): sample\n",
+       "colnames(1): BNA_TF_H3K27ac\n",
+       "colData names(1): sample\n",
+       "\n",
+       "$`.//GSE124008/GSE124008-BNA_TF`\n",
+       "class: RangedSummarizedExperiment \n",
+       "dim: 99 1 \n",
+       "metadata(0):\n",
+       "assays(3): dna.avg rna.avg rna_dna.avg\n",
+       "rownames(99): 1 2 ... 98 99\n",
+       "rowData names(1): sample\n",
+       "colnames(1): BNA_TF\n",
+       "colData names(1): sample\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rds_data_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "53ab2c96-28d8-4fef-9f49-c2375147211d",
    "metadata": {
     "tags": []
