Update yaml build and secondary analysis

--- a/data/build-iSEE-MPRAbase_yaml.ipynb
+++ b/data/build-iSEE-MPRAbase_yaml.ipynb
@@ -55,54 +55,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "44826b9f-acc8-47d7-900d-a8d00d491269",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "$`.//GSE124008/GSE124008-BNA_H3K27ac`\n",
-       "class: RangedSummarizedExperiment \n",
-       "dim: 218 1 \n",
-       "metadata(0):\n",
-       "assays(3): dna.avg rna.avg rna_dna.avg\n",
-       "rownames(218): 1 2 ... 217 218\n",
-       "rowData names(1): sample\n",
-       "colnames(1): BNA_H3K27ac\n",
-       "colData names(1): sample\n",
-       "\n",
-       "$`.//GSE124008/GSE124008-BNA_TF_H3K27ac`\n",
-       "class: RangedSummarizedExperiment \n",
-       "dim: 538 1 \n",
-       "metadata(0):\n",
-       "assays(3): dna.avg rna.avg rna_dna.avg\n",
-       "rownames(538): 1 2 ... 537 538\n",
-       "rowData names(1): sample\n",
-       "colnames(1): BNA_TF_H3K27ac\n",
-       "colData names(1): sample\n",
-       "\n",
-       "$`.//GSE124008/GSE124008-BNA_TF`\n",
-       "class: RangedSummarizedExperiment \n",
-       "dim: 99 1 \n",
-       "metadata(0):\n",
-       "assays(3): dna.avg rna.avg rna_dna.avg\n",
-       "rownames(99): 1 2 ... 98 99\n",
-       "rowData names(1): sample\n",
-       "colnames(1): BNA_TF\n",
-       "colData names(1): sample\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "rds_data_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "53ab2c96-28d8-4fef-9f49-c2375147211d",
    "metadata": {
     "tags": []
@@ -112,12 +64,15 @@
     "metadata_list <- list()\n",
     "config_list <- list()\n",
     "\n",
+    "# NOTE: Adding data subkey for landing page needs to be updated \n",
+    "# in the iSEEindex/R/output.R/.render_markdown_overview function \n",
     "for(i in 1:length(rds_data_list)){\n",
     "    \n",
     "    metadata_list[[i]] <- list(\n",
     "        id = paste0('BFC',i),\n",
     "        title=paste0('BFC',i),\n",
     "        uri = paste0('localhost://../../MPRAbase-Builder/data', sub(\"\\\\./\", \"\", names(rds_data_list)[[i]]), \".rds\"),\n",
+    "        GEO='GSE124008',\n",
     "        description =  paste0('BFC',i))\n",
     "    \n",
     "    config_list[[i]] <- list(\n",
